best-practices/restrict-service-external-ips/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../restrict-service-external-ips.yaml
assert:
- policy-assert.yaml
