best-practices/restrict-service-external-ips/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../restrict-service-external-ips.yaml | kubectl apply -f -
