best-practices/restrict-service-external-ips/e2e/04-manifests.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: good-services.yaml
  shouldFail: false
- file: bad-service-oneip.yaml
  shouldFail: true
- file: bad-service-twoeip.yaml
  shouldFail: true
